; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/config/arm/extr_arm.c_safe_vector_operand.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/config/arm/extr_arm.c_safe_vector_operand.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@const0_rtx = common dso_local global i64 0, align 8
@DImode = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i64, i32)* @safe_vector_operand to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @safe_vector_operand(i64 %0, i32 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  store i64 %0, i64* %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load i64, i64* %4, align 8
  %7 = load i64, i64* @const0_rtx, align 8
  %8 = icmp ne i64 %6, %7
  br i1 %8, label %9, label %11

9:                                                ; preds = %2
  %10 = load i64, i64* %4, align 8
  store i64 %10, i64* %3, align 8
  br label %28

11:                                               ; preds = %2
  %12 = load i32, i32* %5, align 4
  %13 = call i64 @gen_reg_rtx(i32 %12)
  store i64 %13, i64* %4, align 8
  %14 = load i32, i32* %5, align 4
  %15 = load i32, i32* @DImode, align 4
  %16 = icmp eq i32 %14, %15
  br i1 %16, label %17, label %19

17:                                               ; preds = %11
  %18 = load i64, i64* %4, align 8
  br label %23

19:                                               ; preds = %11
  %20 = load i32, i32* @DImode, align 4
  %21 = load i64, i64* %4, align 8
  %22 = call i64 @gen_rtx_SUBREG(i32 %20, i64 %21, i32 0)
  br label %23

23:                                               ; preds = %19, %17
  %24 = phi i64 [ %18, %17 ], [ %22, %19 ]
  %25 = call i32 @gen_iwmmxt_clrdi(i64 %24)
  %26 = call i32 @emit_insn(i32 %25)
  %27 = load i64, i64* %4, align 8
  store i64 %27, i64* %3, align 8
  br label %28

28:                                               ; preds = %23, %9
  %29 = load i64, i64* %3, align 8
  ret i64 %29
}

declare dso_local i64 @gen_reg_rtx(i32) #1

declare dso_local i32 @emit_insn(i32) #1

declare dso_local i32 @gen_iwmmxt_clrdi(i64) #1

declare dso_local i64 @gen_rtx_SUBREG(i32, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
